进一步优化

--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -86,12 +86,19 @@
   "options.extshape.addToVanillaGroups.tooltip": "塊由是改囊增益者，咸入礦藝之本設之組也。如例，階版咸入組「%s」，檻扉咸入組「%s」，鈕及踏板如「%s」組。物入以序同其定者，因序無則。然若已載「合理排序」改囊，可啟是項。",
   "options.extshape.showSpecificGroups": "顯專物組",
   "options.extshape.showSpecificGroups.tooltip": "增益專組以列塊之擁異形者，其括礦藝之本設。是塊也，序以基，塊同基者並序也。",
+  "options.extshape.preventWoodenWallRecipes": "避木垣之製方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避木垣之製方，以解其與解與木窖門之方之撞。若開，汝無以精製木垣。若既載之改囊之解方之撞者，是項可關也。",
+  "options.extshape.avoidSomeButtonRecipes": "避數鈕之製方",
+  "options.extshape.avoidSomeButtonRecipes.tooltip": "避數鈕之製配方，以解與他物方之撞。若金剛石塊者，合一鈕之方，撞與析為九物之方也。若開，無可製是鈕也，以保他物之製。若既載之改囊之解方之撞者，是項可關也。",
+  "options.extshape.specialSnowSlabCrafting": "雪版特方",
+  "options.extshape.specialSnowSlabCrafting.tooltip": "若開，雪版可製以一雪，非三雪塊。此為避撞與製雪以雪塊之方。若既載之改囊之解方之撞者，是項可關也。",
+
   "options.extshape.default": "預設：%s",
   "options.extshape.confirm": "確？",
   "options.extshape.confirm.noGroups": "君「%s」並「%s」咸為「%s」，是形也，如為創法，無從取物自是囊者于創之囊。確行此乎？",
   "options.extshape.confirm.redo": "吾欲三思",
   "options.extshape.registerBlockFamilies": "入簿BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。\n複啟以效見",
+  "options.extshape.registerBlockFamilies.description": "塊之增益於是改也，咸入簿礦藝之BlockFamilies也。他或用也，然若亦用BlockFamilies或現衝突。常無需啟。\n複啟以效見",
 
   "options.extshape.rrp.title": "運行時資囊設置",
   "options.extshape.rrp.description": "理運行時資囊之於塊形之擴模組也。",
@@ -112,6 +119,13 @@
   "options.extshape.rrp.fullPath": "完整路徑：%s",
   "options.extshape.rrp.invalidPath": "是路無效：%s",
 
+  "options.extshape.reasonable-sorting": "調《知序》之規",
+  "options.extshape.reasonable-sorting.description": "如既載改囊《知序》，君可明何以序塊物據其形也，含形之是改囊（塊形之擴）供者。是規者，無動塊之他囊供者。\n\n君亦可選「Reasonable Sorting」於改囊選單以入其規頁。",
+  "options.extshape.dataChanged": "伺服器錄囊既變，複生其耶？",
+  "options.extshape.dataChanged.details": "運行時資囊之此改囊用這，生於礦藝之既蘇之時。君既纂有關錄生之項，其果于復生伺服器之錄囊也。若當下之伺服器（含獨戲內置者）正作，需執\u00a77/reload\u00a7r命令以成效。",
+  "options.dataChanged.finish": "既複生運行時資囊之伺服器錄。若為獨戲或為伺服器主，揮%s以顯方之更。注：惟伺服器主機之設可見效也。",
+
+  "message.extshape.recipe_conflict.start": "開始檢測合成表撞車，可能需要一段時間",
   "message.extshape.recipe_conflict.detected": "驗方之撞：%s",
   "message.extshape.recipe_conflict.unknown": "驗方之異：%s",
   "message.extshape.recipe_conflict.exception": "驗方撞而生異常",
