--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -86,12 +86,19 @@
   "options.extshape.addToVanillaGroups.tooltip": "將本模組添加嘅方塊添加至 Minecraft 嘅原版創造模式物品組中。例如，所有階梯和半磚都加入「%s」物品組，欄杆和牆加入「%s」物品組，按鈕和壓力板則加入「%s」物品組。物品係以定義時順序加入，所以可能會有啲混亂，但是如果你安裝合理排序模組，則推薦開啟此項。",
   "options.extshape.showSpecificGroups": "顯示專門物品組",
   "options.extshape.showSpecificGroups.tooltip": "添加啲專用物品組以顯示所有擁有不同形狀嘅方塊（含原版和模組中），依啲方塊按照其基礎方塊的順序排列，基礎方塊相同嘅方塊顯示在一起。",
+  "options.extshape.preventWoodenWallRecipes": "避免木牆合成配方",
+  "options.extshape.preventWoodenWallRecipes.tooltip": "避免木牆嘅合成配方，以解決同木質地板門嘅配方撞車問題。若開啟，你將冇法合成木牆。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
+  "options.extshape.avoidSomeButtonRecipes": "避免部分按鈕配方",
+  "options.extshape.avoidSomeButtonRecipes.tooltip": "避免部分按鈕嘅合成配方，以修復與其他物品配方撞車的問題。例如，由個鑽石磚合成鑽石按鈕嘅配方與將鑽石磚分解為 9 個鑽石物品嘅配方撞車。若開啟咗，你將冇法合成呢啲按鈕，以確保其他物品能正常合成。如果你安裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
+  "options.extshape.specialSnowSlabCrafting": "特殊的雪半磚配方",
+  "options.extshape.specialSnowSlabCrafting.tooltip": "若開啟，雪半磚則由一個積雪合成，而唔喺由 3 個雪方塊。依個係為咗避免與積雪嘅合成配方嘅撞車。如果你裝有可以修復合成表撞車嘅模組，可以將本選項關閉。",
+
   "options.extshape.default": "默認：%s",
   "options.extshape.confirm": "確定？",
   "options.extshape.confirm.noGroups": "你嘅「%s」和「%s」都設置為「%s」，這意味著你玩創造模式時，無法從創造模式物品欄中獲取模組中嘅物品。你真係要繼續？",
   "options.extshape.confirm.redo": "我再考慮一下",
   "options.extshape.registerBlockFamilies": "註冊 BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "將本模組內的方塊關係註冊到 Minecraft 原版的 BlockFamilies 中。BlockFamilies 可能會被其他模組識別，但是如果其他模組也使用這些 BlockFamilies 則有可能出現一些問題。\n重啟遊戲後生效。",
+  "options.extshape.registerBlockFamilies.description": "將本模組內的方塊關係註冊到 Minecraft 原版的 BlockFamilies 中。BlockFamilies 可能會被其他模組識別，但是如果其他模組也使用這些 BlockFamilies 則有可能出現一些問題。一般冇必要開啟。\n重啟遊戲後生效。",
 
   "options.extshape.rrp.title": "運行時資源包設置",
   "options.extshape.rrp.description": "管理擴展方塊形狀模組中嘅運行時資源包。",
@@ -112,6 +119,13 @@
   "options.extshape.rrp.fullPath": "完整路徑如下：%s",
   "options.extshape.rrp.invalidPath": "無效路徑：%s",
 
+  "options.extshape.reasonable-sorting": "合理排序模組配置",
+  "options.extshape.reasonable-sorting.description": "如果你安裝咗合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供嘅方塊並唔會受到影響。\n\n你也可以喺模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。",
+  "options.extshape.dataChanged": "伺服器數據已改變，是否重新生成伺服器數據？",
+  "options.extshape.dataChanged.details": "本模組使用嘅運行時資源包喺 Minecraft 初始化時就會生成。你剛剛改咗與數據生成有關嘅選項，依個需要喺重新生成伺服器數據後才能生效。此外，如果當前伺服器（包括單人遊戲嘅內置伺服器）正在運行，你還需要輸入 \u00a77/reload\u00a7r 指令。",
+  "options.dataChanged.finish": "已重新生成運行時資源包的伺服器數據。如果您是在單人遊戲，或者是服主，請執行%s以加載合成表的更改。注意：多人遊戲下只有伺服器主機的設置才是有效的。",
+
+  "message.extshape.recipe_conflict.start": "開始檢測合成表撞車，可能需要一段時間",
   "message.extshape.recipe_conflict.detected": "檢測到合成表存在撞車：%s",
   "message.extshape.recipe_conflict.unknown": "檢測到合成表存在未知情況：%s",
   "message.extshape.recipe_conflict.exception": "檢測合成表撞車時出現未知錯誤",
