--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -122,7 +122,7 @@
   "options.extshape.rrp.invalidPath": "無效路徑：%s",
 
   "options.extshape.reasonable-sorting": "合理排序模組配置",
-  "options.extshape.reasonable-sorting.description": "如果你安裝咗合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供嘅方塊並唔會受到影響。\n\n你也可以喺模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。",
+  "options.extshape.reasonable-sorting.description": "如果你安裝咗合理排序模組，你可以定義方塊物品根據其形狀如何排序，這些形狀包括本模組提供的方塊形狀。其他模組提供嘅方塊並唔會受到影響。\n\n你也可以喺模組功能表中選擇“Reasonable Sorting”以進入其模組配置介面。\n\n如果此按鈕點擊冇響應，可能係合理排序模組版本未安裝或過低。",
   "options.extshape.dataChanged": "伺服器數據已改變，是否重新生成伺服器數據？",
   "options.extshape.dataChanged.details": "本模組使用嘅運行時資源包喺 Minecraft 初始化時就會生成。你剛剛改咗與數據生成有關嘅選項，依個需要喺重新生成伺服器數據後才能生效。此外，如果當前伺服器（包括單人遊戲嘅內置伺服器）正在運行，你還需要輸入 \u00a77/reload\u00a7r 指令。",
   "options.dataChanged.finish": "已重新生成運行時資源包的伺服器數據。如果您是在單人遊戲，或者是服主，請執行%s以加載合成表的更改。注意：多人遊戲下只有伺服器主機的設置才是有效的。",
