--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -22,6 +22,7 @@
   "block.extshape.prefix.chiseled_quartz": "鏨石英",
   "block.extshape.prefix.chiseled_stone_brick": "鏨磚",
   "block.extshape.prefix.clay": "埴",
+  "block.extshape.prefix.coal": "石炭",
   "block.extshape.prefix.crimson": "緋蕈木",
   "block.extshape.prefix.cut_copper": "割銅",
   "block.extshape.prefix.dark_oak": "黯柞",
@@ -55,6 +56,7 @@
   "block.extshape.prefix.raw_gold": "金石",
   "block.extshape.prefix.raw_iron": "鐵石",
   "block.extshape.prefix.red_nether_brick": "焱界紅磚",
+  "block.extshape.prefix.sculk": "幽匿",
   "block.extshape.prefix.smooth_quartz": "潤石英",
   "block.extshape.prefix.snow": "雪",
   "block.extshape.prefix.spruce": "樅",
