--- a/src/main/resources/assets/extshape/lang/zh_tw.json
+++ b/src/main/resources/assets/extshape/lang/zh_tw.json
@@ -9,9 +9,9 @@
   "block.extshape.?_wall": "%s牆",
   "block.extshape.?_button": "%s按鈕",
   "block.extshape.?_pressure_plate": "%s壓力板",
-  "block.extshape.?_vertical_slab": "%s縱半磚",
+  "block.extshape.?_vertical_slab": "豎直%s半磚",
   "block.extshape.?_quarter_piece": "%s橫條",
-  "block.extshape.?_vertical_stairs": "%s縱階梯",
+  "block.extshape.?_vertical_stairs": "豎直%s階梯",
   "block.extshape.?_vertical_quarter_piece": "%s縱條",
 
   "block.extshape.prefix.acacia": "相思木",
@@ -22,6 +22,7 @@
   "block.extshape.prefix.chiseled_quartz": "浮雕石英",
   "block.extshape.prefix.chiseled_stone_brick": "浮雕石磚",
   "block.extshape.prefix.clay": "黏土",
+  "block.extshape.prefix.coal": "煤炭",
   "block.extshape.prefix.crimson": "緋紅蕈木",
   "block.extshape.prefix.cut_copper": "切製銅",
   "block.extshape.prefix.dark_oak": "黑橡木",
@@ -55,6 +56,7 @@
   "block.extshape.prefix.raw_gold": "金原礦",
   "block.extshape.prefix.raw_iron": "鐵原礦",
   "block.extshape.prefix.red_nether_brick": "紅地獄磚",
+  "block.extshape.prefix.sculk": "伏聆",
   "block.extshape.prefix.smooth_quartz": "平滑石英",
   "block.extshape.prefix.snow": "雪",
   "block.extshape.prefix.spruce": "杉木",
