初步更新至 1.7.0，支持柱子方块的各种形状，目前只对台阶进行了适配；暂未加入与原木、木头有关的标签。

--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -10,8 +10,8 @@
   "block.extshape.?_slab": "%s台阶",
   "block.extshape.?_stairs": "%s楼梯",
   "block.extshape.?_vertical_quarter_piece": "%s纵条",
-  "block.extshape.?_vertical_slab": "%s纵台阶",
-  "block.extshape.?_vertical_stairs": "%s纵楼梯",
+  "block.extshape.?_vertical_slab": "竖直%s台阶",
+  "block.extshape.?_vertical_stairs": "竖直%s楼梯",
   "block.extshape.?_wall": "%s墙",
 
   "block.extshape.prefix.acacia": "金合欢木",
@@ -22,6 +22,7 @@
   "block.extshape.prefix.chiseled_quartz": "錾制石英",
   "block.extshape.prefix.chiseled_stone_brick": "錾制石砖",
   "block.extshape.prefix.clay": "黏土",
+  "block.extshape.prefix.coal": "煤炭",
   "block.extshape.prefix.crimson": "绯红木",
   "block.extshape.prefix.cut_copper": "切制铜",
   "block.extshape.prefix.dark_oak": "深色橡木",
@@ -57,6 +58,7 @@
   "block.extshape.prefix.raw_gold": "粗金",
   "block.extshape.prefix.raw_iron": "粗铁",
   "block.extshape.prefix.red_nether_brick": "红色下界砖",
+  "block.extshape.prefix.sculk": "幽匿",
   "block.extshape.prefix.smooth_quartz": "平滑石英",
   "block.extshape.prefix.snow": "雪",
   "block.extshape.prefix.spruce": "云杉木",
