增加日语翻译，并进行微调，并移除了1.19相关内容 修复各形状注册顺序不一致的问题 应用1.18.2之后的译名变更 适应Forge 准备更新至1.7.1 发布 1.7.0 更新至 1.7.0 初步更新至 1.7.0，支持柱子方块的各种形状，目前只对台阶进行了适配；暂未加入与原木、木头有关的标签。 更新用于构建Forge的版本

--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -22,6 +22,7 @@
   "block.extshape.prefix.chiseled_quartz": "鏨石英",
   "block.extshape.prefix.chiseled_stone_brick": "鏨磚",
   "block.extshape.prefix.clay": "埴",
+  "block.extshape.prefix.coal": "石炭",
   "block.extshape.prefix.crimson": "緋蕈木",
   "block.extshape.prefix.cut_copper": "割銅",
   "block.extshape.prefix.dark_oak": "黯柞",
