--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -9,10 +9,10 @@
   "block.extshape.?_wall": "%s Wall",
   "block.extshape.?_button": "%s Button",
   "block.extshape.?_pressure_plate": "%s Pressure Plate",
-  "block.extshape.?_vertical_slab": "%s Vertical Slab",
+  "block.extshape.?_vertical_slab": "Vertical %s Slab",
   "block.extshape.?_quarter_piece": "%s Quarter Piece",
-  "block.extshape.?_vertical_stairs": "%s Vertical Stairs",
-  "block.extshape.?_vertical_quarter_piece": "%s Vertical Quarter Piece",
+  "block.extshape.?_vertical_stairs": "Vertical %s Stairs",
+  "block.extshape.?_vertical_quarter_piece": "Vertical %s Quarter Piece",
 
   "block.extshape.prefix.acacia": "Acacia",
   "block.extshape.prefix.amethyst": "Amethyst",
@@ -22,6 +22,7 @@
   "block.extshape.prefix.chiseled_quartz": "Chiseled Quartz",
   "block.extshape.prefix.chiseled_stone_brick": "Chiseled Stone Brick",
   "block.extshape.prefix.clay": "Clay",
+  "block.extshape.prefix.coal": "Coal",
   "block.extshape.prefix.crimson": "Crimson",
   "block.extshape.prefix.cut_copper": "Cut Copper",
   "block.extshape.prefix.dark_oak": "Dark Oak",
