修复各形状注册顺序不一致的问题 应用1.18.2之后的译名变更

--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -1,6 +1,6 @@
 {
   "block.extshape.petrified_oak_planks": "石化橡木木板",
-  "block.extshape.smooth_stone_slab_double": "双层平滑石台阶",
+  "block.extshape.smooth_stone_slab_double": "双层平滑石头台阶",
 
   "block.extshape.?_button": "%s按钮",
   "block.extshape.?_fence": "%s栅栏",
