更新构建方式以及语言生成模式

--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -14,69 +14,13 @@
   "block.extshape.?_vertical_stairs": "Vertical %s Stairs",
   "block.extshape.?_vertical_quarter_piece": "Vertical %s Quarter Piece",
 
-  "block.extshape.prefix.acacia": "Acacia",
-  "block.extshape.prefix.amethyst": "Amethyst",
-  "block.extshape.prefix.bamboo": "Bamboo",
-  "block.extshape.prefix.birch": "Birch",
-  "block.extshape.prefix.brick": "Brick",
-  "block.extshape.prefix.chiseled_nether_brick": "Chiseled Nether Brick",
-  "block.extshape.prefix.chiseled_quartz": "Chiseled Quartz",
-  "block.extshape.prefix.chiseled_stone_brick": "Chiseled Stone Brick",
-  "block.extshape.prefix.clay": "Clay",
-  "block.extshape.prefix.coal": "Coal",
-  "block.extshape.prefix.crimson": "Crimson",
-  "block.extshape.prefix.cut_copper": "Cut Copper",
-  "block.extshape.prefix.dark_oak": "Dark Oak",
-  "block.extshape.prefix.deepslate_brick": "Deepslate Brick",
-  "block.extshape.prefix.deepslate_tile": "Deepslate Tile",
-  "block.extshape.prefix.diamond": "Diamond",
-  "block.extshape.prefix.dripstone": "Dripstone",
-  "block.extshape.prefix.emerald": "Emerald",
-  "block.extshape.prefix.end_stone_brick": "End Stone Brick",
-  "block.extshape.prefix.exposed_copper": "Exposed Copper",
-  "block.extshape.prefix.exposed_cut_copper": "Exposed Cut Copper",
-  "block.extshape.prefix.gold": "Gold",
-  "block.extshape.prefix.honeycomb": "Honeycomb",
-  "block.extshape.prefix.iron": "Iron",
-  "block.extshape.prefix.jungle": "Jungle",
-  "block.extshape.prefix.lapis": "Lapis",
-  "block.extshape.prefix.mangrove": "Mangrove",
-  "block.extshape.prefix.moss": "Moss",
-  "block.extshape.prefix.mossy_stone_brick": "Mossy Stone Brick",
-  "block.extshape.prefix.mud_brick": "Mud Brick",
-  "block.extshape.prefix.nether_brick": "Nether Brick",
-  "block.extshape.prefix.nether_wart": "Nether Wart",
-  "block.extshape.prefix.netherite": "Netherite",
-  "block.extshape.prefix.oak": "Oak",
-  "block.extshape.prefix.oxidized_copper": "Oxidized Copper",
-  "block.extshape.prefix.oxidized_cut_copper": "Oxidized Cut Copper",
-  "block.extshape.prefix.polished_blackstone_brick": "Polished Blackstone Brick",
-  "block.extshape.prefix.prismarine_brick": "Prismarine",
-  "block.extshape.prefix.purpur": "Purpur",
-  "block.extshape.prefix.quartz": "Quartz",
-  "block.extshape.prefix.quartz_brick": "Quartz Brick",
-  "block.extshape.prefix.raw_copper": "Raw Copper",
-  "block.extshape.prefix.raw_gold": "Raw Gold",
-  "block.extshape.prefix.raw_iron": "Raw iron",
-  "block.extshape.prefix.red_nether_brick": "Red Nether Brick",
-  "block.extshape.prefix.sculk": "Sculk",
-  "block.extshape.prefix.smooth_quartz": "Smooth Quartz",
-  "block.extshape.prefix.snow": "Snow",
-  "block.extshape.prefix.spruce": "Spruce",
-  "block.extshape.prefix.stone_brick": "Stone Brick",
-  "block.extshape.prefix.unknown": "Unknown",
-  "block.extshape.prefix.warped": "Warped",
-  "block.extshape.prefix.warped_wart": "Warped Wart",
-  "block.extshape.prefix.waxed_copper": "Waxed Copper",
-  "block.extshape.prefix.waxed_cut_copper": "Waxed Cut Copper",
-  "block.extshape.prefix.waxed_exposed_copper": "Waxed Exposed Copper",
-  "block.extshape.prefix.waxed_exposed_cut_copper": "Waxed Exposed Cut Copper",
-  "block.extshape.prefix.waxed_oxidized_copper": "Waxed Oxidized Copper",
-  "block.extshape.prefix.waxed_oxidized_cut_copper": "Waxed Oxidized Cut Copper",
-  "block.extshape.prefix.waxed_weathered_copper": "Waxed Weathered Copper",
-  "block.extshape.prefix.waxed_weathered_cut_copper": "Waxed Weathered Cut Copper",
-  "block.extshape.prefix.weathered_copper": "Weathered Copper",
-  "block.extshape.prefix.weathered_cut_copper": "Weathered Cut Copper",
+  "block.extshape.prefix_removal.block_of.from": "Block of",
+  "block.extshape.suffix_conversion.brick.from": " Bricks",
+  "block.extshape.suffix_conversion.brick.to": " Brick",
+  "block.extshape.suffix_conversion.planks.from": " Planks",
+  "block.extshape.suffix_conversion.planks.to": "",
+  "block.extshape.suffix_conversion.tiles.from": " Tile",
+  "block.extshape.suffix_conversion.tiles.to": "",
 
   "itemGroup.extshape.wooden_blocks": "\u00a79Extended Block Shape:\u00a7r Wooden and Bamboo Blocks",
   "itemGroup.extshape.colorful_blocks": "\u00a79Extended Block Shape:\u00a7r Colorful Blocks",
