适应 1.19.3（从 Fabric 分支中优选），并适应Forge

--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -14,70 +14,7 @@
   "block.extshape.?_vertical_stairs": "Vertical %s Stairs",
   "block.extshape.?_vertical_quarter_piece": "Vertical %s Quarter Piece",
 
-  "block.extshape.prefix.acacia": "Acacia",
-  "block.extshape.prefix.amethyst": "Amethyst",
-  "block.extshape.prefix.birch": "Birch",
-  "block.extshape.prefix.brick": "Brick",
-  "block.extshape.prefix.chiseled_nether_brick": "Chiseled Nether Brick",
-  "block.extshape.prefix.chiseled_quartz": "Chiseled Quartz",
-  "block.extshape.prefix.chiseled_stone_brick": "Chiseled Stone Brick",
-  "block.extshape.prefix.clay": "Clay",
-  "block.extshape.prefix.coal": "Coal",
-  "block.extshape.prefix.crimson": "Crimson",
-  "block.extshape.prefix.cut_copper": "Cut Copper",
-  "block.extshape.prefix.dark_oak": "Dark Oak",
-  "block.extshape.prefix.deepslate_brick": "Deepslate Brick",
-  "block.extshape.prefix.deepslate_tile": "Deepslate Tile",
-  "block.extshape.prefix.diamond": "Diamond",
-  "block.extshape.prefix.dripstone": "Dripstone",
-  "block.extshape.prefix.emerald": "Emerald",
-  "block.extshape.prefix.end_stone_brick": "End Stone Brick",
-  "block.extshape.prefix.exposed_copper": "Exposed Copper",
-  "block.extshape.prefix.exposed_cut_copper": "Exposed Cut Copper",
-  "block.extshape.prefix.gold": "Gold",
-  "block.extshape.prefix.honeycomb": "Honeycomb",
-  "block.extshape.prefix.iron": "Iron",
-  "block.extshape.prefix.jungle": "Jungle",
-  "block.extshape.prefix.lapis": "Lapis",
-  "block.extshape.prefix.mangrove": "Mangrove",
-  "block.extshape.prefix.moss": "Moss",
-  "block.extshape.prefix.mossy_stone_brick": "Mossy Stone Brick",
-  "block.extshape.prefix.mud_brick": "Mud Brick",
-  "block.extshape.prefix.nether_brick": "Nether Brick",
-  "block.extshape.prefix.nether_wart": "Nether Wart",
-  "block.extshape.prefix.netherite": "Netherite",
-  "block.extshape.prefix.oak": "Oak",
-  "block.extshape.prefix.oxidized_copper": "Oxidized Copper",
-  "block.extshape.prefix.oxidized_cut_copper": "Oxidized Cut Copper",
-  "block.extshape.prefix.polished_blackstone_brick": "Polished Blackstone Brick",
-  "block.extshape.prefix.prismarine_brick": "Prismarine",
-  "block.extshape.prefix.purpur": "Purpur",
-  "block.extshape.prefix.quartz": "Quartz",
-  "block.extshape.prefix.quartz_brick": "Quartz Brick",
-  "block.extshape.prefix.raw_copper": "Raw Copper",
-  "block.extshape.prefix.raw_gold": "Raw Gold",
-  "block.extshape.prefix.raw_iron": "Raw iron",
-  "block.extshape.prefix.red_nether_brick": "Red Nether Brick",
-  "block.extshape.prefix.sculk": "Sculk",
-  "block.extshape.prefix.smooth_quartz": "Smooth Quartz",
-  "block.extshape.prefix.snow": "Snow",
-  "block.extshape.prefix.spruce": "Spruce",
-  "block.extshape.prefix.stone_brick": "Stone Brick",
-  "block.extshape.prefix.unknown": "Unknown",
-  "block.extshape.prefix.warped": "Warped",
-  "block.extshape.prefix.warped_wart": "Warped Wart",
-  "block.extshape.prefix.waxed_copper": "Waxed Copper",
-  "block.extshape.prefix.waxed_cut_copper": "Waxed Cut Copper",
-  "block.extshape.prefix.waxed_exposed_copper": "Waxed Exposed Copper",
-  "block.extshape.prefix.waxed_exposed_cut_copper": "Waxed Exposed Cut Copper",
-  "block.extshape.prefix.waxed_oxidized_copper": "Waxed Oxidized Copper",
-  "block.extshape.prefix.waxed_oxidized_cut_copper": "Waxed Oxidized Cut Copper",
-  "block.extshape.prefix.waxed_weathered_copper": "Waxed Weathered Copper",
-  "block.extshape.prefix.waxed_weathered_cut_copper": "Waxed Weathered Cut Copper",
-  "block.extshape.prefix.weathered_copper": "Weathered Copper",
-  "block.extshape.prefix.weathered_cut_copper": "Weathered Cut Copper",
-
-  "itemGroup.extshape.wooden_blocks": "\u00a79Extended Block Shape:\u00a7r Wooden Blocks",
+  "itemGroup.extshape.wooden_blocks": "\u00a79Extended Block Shape:\u00a7r Wooden and Bamboo Blocks",
   "itemGroup.extshape.colorful_blocks": "\u00a79Extended Block Shape:\u00a7r Colorful Blocks",
   "itemGroup.extshape.stone_blocks": "\u00a79Extended Block Shape:\u00a7r Stone Blocks",
   "itemGroup.extshape.other_blocks": "\u00a79Extended Block Shape:\u00a7r Other Blocks",
@@ -87,9 +24,14 @@
 
   "options.extshape.title": "Configuration of Extended Block Shapes Mod",
   "options.extshape.addToVanillaGroups": "Add to vanilla groups",
-  "options.extshape.addToVanillaGroups.tooltip": "Add blocks added by this mod to Minecraft's vanilla Creative Mode item groups. For example, all stairs, slabs, etc., are added to \"%s\" groups; fences and walls are added to \"%s\" group, and fence gates, pressure plates and buttons are added to \"%s\" group. Items are sort in the order they are defined, so the item list could be messy, but if you installed Reasonable Sorting Mod, then this option is preferred.",
+  "options.extshape.addToVanillaGroups.tooltip": "If enabled, blocks of this mod will directly display in Minecraft's vanilla item groups, such as %s, %s and %s. The blocks are appended after their base blocks so you can quickly find blocks of a same base block in different shapes. By default, all shapes will be added in the vanilla item group. You may specify which shapes to be added in vanilla groups in the text box below.",
   "options.extshape.showSpecificGroups": "Show specific groups",
   "options.extshape.showSpecificGroups.tooltip": "Add four specific item groups to display blocks that have different shapes (including vanilla and mod) in a fancy order. They are sorted by their base blocks, and blocks based on a same block are displayed together.",
+  "options.extshape.shapesToAddToVanilla": "Shapes to add to vanilla",
+  "options.extshape.shapesToAddToVanilla.description": "Add which shapes to vanilla item groups? (Separated with space.)",
+  "options.extshape.shapesInSpecificGroups": "Shapes in specific group",
+  "options.extshape.shapesInSpecificGroups.description": "Add which shapes to the mod's specific item groups? (Separated with space.)",
+  "options.extshape.reset": "Reset",
   "options.extshape.preventWoodenWallRecipes": "Prevent wooden wall recipes",
   "options.extshape.preventWoodenWallRecipes.tooltip": "Prevent the crafting recipes of wooden walls, in order to avoid the conflict with wooden trapdoors. When ON, you cannot craft wooden walls. If you installed mods that solve recipe conflict, you can turn this option OFF.",
   "options.extshape.avoidSomeButtonRecipes": "Avoid some button recipes",
@@ -102,26 +44,27 @@
   "options.extshape.confirm.noGroups": "Your both '%s' and '%s' are set '%s', which means in Creative Mode you may not directly obtain items in this mod in your Creative inventory. Are you sure to continue?",
   "options.extshape.confirm.redo": "I reconsider",
   "options.extshape.registerBlockFamilies": "Register BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "Register the relations of the block to Minecraft's vanilla BlockFamilies. The BlockFamilies registry may be identified by some mods, but may cause potential problems when other mods use the BlockFamilies. You usually do not need to enable it.\nTakes effect after restarting game.",
+  "options.extshape.registerBlockFamilies.description": "Usually not recommended to open. If enabled, when initializing Minecraft, the relations of the block in this mod to Minecraft's vanilla blocks will be registered in BlockFamilies. The BlockFamilies registry may be identified by some mods, but may cause potential instability. You usually do not need to enable it.\n\nTakes effect after restarting game.",
 
   "options.extshape.rrp.title": "Runtime Resource Pack settings",
   "options.extshape.rrp.description": "Manage the Runtime Resource Pack of Extended Block Shapes mod.",
   "options.extshape.rrp.regenClientResources": "Regenerate client resources",
   "options.extshape.rrp.regenClientResources.process": "Regenerating client resources...",
-  "options.extshape.rrp.regenClientResources.description": "Regenerate the client resources of the runtime resource pack of this mod, not influencing vanilla and other mods. This is primitively used for development and does not take effect. Regenerated resources are applied only after pressing F3+T.",
+  "options.extshape.rrp.regenClientResources.description": "Regenerate the client resources of the runtime resource pack of this mod, not influencing vanilla and other mods. This is primitively used for development. In the development environment, the changes in the generation process may be hot-swapped, otherwise no changes are expected to happen. Changes in regenerated resources take affect only after pressing F3+T.",
   "options.extshape.rrp.regenServerData": "Regenerate server data",
   "options.extshape.rrp.regenServerData.process": "Regenerating server data...",
-  "options.extshape.rrp.regenServerData.description": "Regenerate the server data of the runtime resource pack of this mod, not influencing vanilla and other mods. This is primitively used for development and does not take effect. Regenerated resources are applied only after using \"/data\" command.",
+  "options.extshape.rrp.regenServerData.description": "Regenerate the server data of the runtime resource pack of this mod, not influencing vanilla and other mods. This is primitively used for development. In the development environment, the changes in the generation process may be hot-swapped, otherwise no changes are expected to happen. Changes in regenerated resources take affect only after using \"/data\" command.",
   "options.extshape.rrp.exportClientResources": "Export client resource pack",
   "options.extshape.rrp.exportClientResources.process": "Exporting client resource pack...",
-  "options.extshape.rrp.exportClientResources.description": "Export client resource of runtime resource pack in the specified path so that you can see its content, as if it is a regular resource pack.",
+  "options.extshape.rrp.exportClientResources.description": "Export client resources of runtime resource pack in the specified path so that you can clearly see its content as if it was a regular resource pack.",
   "options.extshape.rrp.exportServerData": "Export server data",
   "options.extshape.rrp.exportServerData.process": "Exporting server data...",
-  "options.extshape.rrp.exportServerData.description": "Export server data of runtime resource pack in the specified path so that you can see its content, as if it is a regular data pack.",
+  "options.extshape.rrp.exportServerData.description": "Export server data of runtime resource pack in the specified path so that you can clearly see its content as if it was a regular data pack.",
   "options.extshape.rrp.exportFilePath": "Export file path",
   "options.extshape.rrp.textFieldHeader": "Resources will be exported at:",
   "options.extshape.rrp.fullPath": "Full path: %s",
   "options.extshape.rrp.invalidPath": "Invalid path: %s",
+  "options.extshape.rrp.info": "Notice: this page is intended for only debugging, and not useful for players in most situations. If you are not sure what you are doing by entering this page, please click \"%1$s\".",
 
   "options.extshape.reasonable-sorting": "Reasonable Sorting mod config",
   "options.extshape.reasonable-sorting.description": "If you installed Reasonable Sorting mod, you can define how block items are sorted according to their shape, including shapes provided this mod. It may not affect blocks provided by other mods.\n\nYou can also access the mod config screen of Reasonable Sorting by selecting the mod in the mod menu.\n\nIf there is no response on clicking this button, it's likely that you have not installed Reasonable Sorting mod or the version is too low.",
@@ -135,5 +78,5 @@
   "message.extshape.recipe_conflict.exception": "Exceptions were found when detecting recipe conflict",
   "message.extshape.recipe_conflict.finish.none": "Finished checking. In total no recipe conflicts have been found.",
   "message.extshape.recipe_conflict.finish.single": "Finished checking. In total %s recipe conflict has been found.",
-  "message.extshape.recipe_conflict.finish.plural": "Finished checking. In total %s recip conflicts have been found."
+  "message.extshape.recipe_conflict.finish.plural": "Finished checking. In total %s recipe conflicts have been found."
 }
