--- a/src/main/resources/assets/extshape/lang/zh_cn.json
+++ b/src/main/resources/assets/extshape/lang/zh_cn.json
@@ -87,9 +87,14 @@
 
   "options.extshape.title": "扩展方块形状模组配置",
   "options.extshape.addToVanillaGroups": "添加至原版物品组",
-  "options.extshape.addToVanillaGroups.tooltip": "将本模组添加的方块添加至Minecraft的原版创造模式物品组中。例如，所有的楼梯和台阶都加入“%s”物品组，栅栏和墙加入“%s”物品组，按钮和压力板则加入“%s”物品组。物品是按照被定义时的顺序加入的，所以可能会有点乱，但是如果您安装了合理排序模组，则推荐开启此项。",
-  "options.extshape.showSpecificGroups": "显示专门物品组",
-  "options.extshape.showSpecificGroups.tooltip": "添加一些专门的物品组以显示所有拥有不同形状的方块（含原版和模组中的），这些方块按照其基础方块的顺序排列，基础方块相同的方块显示在一起。",
+  "options.extshape.addToVanillaGroups.tooltip": "如果启用，此模组的方块将会直接添加到Minecraft的原版物品组中，例如%s、%s和%s。方块会直接添加到其基础方块后面，这样你可以方便地找到同一基础方块的不同形状的方块。默认情况下，会添加所有的形状。你可以在下面的文本框中指定添加哪些形状。",
+  "options.extshape.showSpecificGroups": "显示专用物品组",
+  "options.extshape.showSpecificGroups.tooltip": "添加4个专门的物品组以显示所有拥有不同形状的方块（含原版和模组中的），这些方块按照其基础方块的顺序排列，基础方块相同的方块显示在一起。",
+  "options.extshape.shapesToAddToVanilla": "添加到原版物品组中的形状",
+  "options.extshape.shapesToAddToVanilla.description": "需要将哪些形状的方块添加到原版物品组中？（用空格间隔。）",
+  "options.extshape.shapesInSpecificGroups": "专用物品组中的形状",
+  "options.extshape.shapesInSpecificGroups.description": "将哪些形状的方块添加到本模组的专用物品组中？（用空格间隔。）",
+  "options.extshape.reset": "重置",
   "options.extshape.preventWoodenWallRecipes": "避免木墙合成配方",
   "options.extshape.preventWoodenWallRecipes.tooltip": "避免木墙的合成配方，以解决与木质活板门的配方撞车问题。若开启，您将无法合成木墙。如果您安装了可以修复合成表撞车的模组，可以将本选项关闭。",
   "options.extshape.avoidSomeButtonRecipes": "避免部分按钮配方",
@@ -102,26 +107,27 @@
   "options.extshape.confirm.noGroups": "您的“%s”和“%s”都设置为“%s”，这意味着您在创造模式下，无法从创造模式物品栏中获取模组中的物品。确定要继续吗？",
   "options.extshape.confirm.redo": "我再考虑下",
   "options.extshape.registerBlockFamilies": "注册BlockFamilies",
-  "options.extshape.registerBlockFamilies.description": "将本模组内的方块关系注册到Minecraft原版的BlockFamilies中。BlockFamilies可能会被其他模组识别，但是如果其他模组也使用这些BlockFamilies则有可能出现一些问题。一般不需要开启。\n重启游戏后生效。",
+  "options.extshape.registerBlockFamilies.description": "一般不建议开启。如果启用，初始化Minecraft的时候，本模组中的方块与Minecraft的原版方块之间的关系将会注册到BlockFamilies中。BlockFamilies的注册表可以被其他模组识别，但有可能导致不稳定，因此一般不需要开启。\n\n重启游戏后生效。",
 
   "options.extshape.rrp.title": "运行时资源包设置",
   "options.extshape.rrp.description": "管理扩展方块形状模组的运行时资源包。",
   "options.extshape.rrp.regenClientResources": "重新生成客户端资源包",
   "options.extshape.rrp.regenClientResources.process": "正在重新生成客户端资源包…",
-  "options.extshape.rrp.regenClientResources.description": "重新生成本模组的运行时资源包的客户端资源包，不影响原版和其他模组。主要用于开发，一般不起效果。重新生成的资源需按F3+T才会被应用。",
+  "options.extshape.rrp.regenClientResources.description": "重新生成本模组的运行时资源包的客户端资源包，不影响原版和其他模组。主要用于开发，在开发环境中，生成过程的变化可以被热交换，其他情况一般不会发生变化。重新生成的资源的变化需按F3+T才会生效。",
   "options.extshape.rrp.regenServerData": "重新生成服务器数据包",
   "options.extshape.rrp.regenServerData.process": "正在重新生成服务器数据包…",
-  "options.extshape.rrp.regenServerData.description": "重新生成本模组的运行时资源包的服务器数据包，不影响原版和其他模组。主要用于开发，一般不起效果。重新生成的资源需使用/data命令才会被应用。",
+  "options.extshape.rrp.regenServerData.description": "重新生成本模组的运行时资源包的服务器数据包，不影响原版和其他模组。主要用于开发，在开发环境中，生成过程的变化可以被热交换，其他情况一般不会发生变化。重新生成的资源的变化需使用/data命令才会生效。",
   "options.extshape.rrp.exportClientResources": "导出客户端资源包",
   "options.extshape.rrp.exportClientResources.process": "正在导出客户端资源包…",
-  "options.extshape.rrp.exportClientResources.description": "将运行时资源包的客户端资源导出到指定的路径中，以便于像普通的资源包一样查看其内容。",
+  "options.extshape.rrp.exportClientResources.description": "将运行时资源包的客户端资源导出到指定的路径中，以便于像普通的资源包一样清楚地查看其内容。",
   "options.extshape.rrp.exportServerData": "导出服务器数据包",
   "options.extshape.rrp.exportServerData.process": "正在导出服务器数据包…",
-  "options.extshape.rrp.exportServerData.description": "将运行时资源包的服务器数据导出到指定的路径中，以便于像普通的数据包一样查看其内容。",
+  "options.extshape.rrp.exportServerData.description": "将运行时资源包的服务器数据导出到指定的路径中，以便于像普通的数据包一样清楚地查看其内容。",
   "options.extshape.rrp.exportFilePath": "导出文件路径",
   "options.extshape.rrp.textFieldHeader": "资源将导出至以下路径：",
   "options.extshape.rrp.fullPath": "完整路径如下：%s",
   "options.extshape.rrp.invalidPath": "无效的路径：%s",
+  "options.extshape.rrp.info": "注意：本页仅用于调试，大多数情况下对玩家不起作用。如果不确定本页内容的功能，请直接按下“%1$s”。",
 
   "options.extshape.reasonable-sorting": "合理排序模组配置",
   "options.extshape.reasonable-sorting.description": "如果您安装了“合理排序”模组，你可以定义方块物品根据其形状如何排序，这些形状包括本模组提供的方块形状。其他模组提供的方块并不会受到影响。\n\n你也可以在模组菜单中选择“Reasonable Sorting”以进入其模组配置界面。\n\n如果此按钮点击无响应，可能是“合理排序”模组未安装或版本过低。",
